small tweaks. attempting to allow fullscreen on rotation. added meta-file generation and editing support. next is finishing support for editing seriesn files.

--- a/src/player-windows/meta-gen/MetaFileGenerator.css
+++ b/src/player-windows/meta-gen/MetaFileGenerator.css
@@ -6,10 +6,6 @@
     align-items: center;
 }
 
-#meta-gen-submit-btn{
-    padding-top: 20px;
-}
-
-#meta-gen-swap-btn{
+.meta-gen-btn{
     padding-top: 20px;
 }
