--- a/src/player-windows/movie/Movie.css
+++ b/src/player-windows/movie/Movie.css
@@ -3,3 +3,9 @@
     width: 70%;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 900px) and (orientation: portrait) {
+    #movie{
+        width: 100%;
+    }
+}
