css fixes for mobile. removed attempted support for fullscreen on rotation as browsers do not allow it.

--- a/src/player-windows/main-menu/MainMenu.css
+++ b/src/player-windows/main-menu/MainMenu.css
@@ -1,14 +1,20 @@
 
 #meta-gen-btn{
-    visibility: hidden;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    visibility: visible;
 }
 
-@media not screen and (max-width: 900px){
+@media screen and (max-width: 900px){
     #meta-gen-btn{
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        visibility: visible;
+        visibility: hidden;
+    }
+    #main-menu{
+        width: 100vw;
+    }
+    #main-menu h1{
+        font-size: 1.3em;
     }
 }
 
